Mods for JW's comments - round 1

--- a/supplementary/depthandcurv/depthandcurv.tex
+++ b/supplementary/depthandcurv/depthandcurv.tex
@@ -37,7 +37,7 @@ This is a small study of 36 sheep from two Flocks, 18 from each Flock. Wthin eac
 On each sheep 25 follicles chosen at random were measured on a vertical skin section taken fron a skin biopsy sample obtained by the technique of Maddocks and Jackson (1988)~\cite{madd:88}. The measurements were of follicle depth, $t$, and $h$, as defined below.
 
 \subsection{Measurements}
-The following measurements and scores were available
+The following measurements and scores were available. All measurements were in units of 0.02 mm. 
 \begin{description}
 \item[SkinType] visual scores for sheep skin type. Two grades "loose" and "wrinkly". 
 \item[Follicle depth] perpendicular distance from skin surface to bottom of follicle bulb
@@ -127,7 +127,9 @@ Of all the aspects discussed above, one stands out. Here is what we think is act
 
 Follicles develop in the foetus between 60 and 150 days. Papilla cells migrate to  or agglomerate at sites. Sites are thought to be determined by the collagen network. Above each site, at the skin surface, a downgrowth of epidermal tissue occurs, directed toward the site. The papilla cells at the site act as an attractor.  Now, if the site moves sideways after the downgrowth commences, the partially completed downgrowth will curve toward the new site location, resulting in a curved follicle. The downgrowth will always be toward the attractor. The curved follicle will also need to be longer in order for the bulb to reach the papilla cells at the new site. What would cause the site to move? Well  it would seem that development of hard collagen causes the sites to move. This would have to happen at the critical time while the follicle downgrowths were part complete.
 
-Only P and So follicles have sites. So only P and So follicles would be affected by the 'moving site effect'. So look at Figure~\ref{fig:radcurvxcurvlen}. For the wrinkly sheep  (which are the green points) there are the P and So follicles with their curved length > 140 and tiny radius of curvature, at the top left corner of the scatterplot. All the other green points are SD follicles; they do not have defined sites; they curve because the papilla cells aggregate around other follicles and they have to curve to belong to a common follicle opening. They are not long because the papilla cells aggregate close to other follicles.
+One view is that only P and So follicles have sites. So only P and So follicles would be affected by the 'moving site effect'. So look at Figure~\ref{fig:radcurvxcurvlen}. For the wrinkly sheep  (which are the green points) there are the P and So follicles with their curved length > 140 and tiny radius of curvature, at the top left corner of the scatterplot. All the other green points are Sd follicles; they do not have defined sites; they curve because the papilla cells aggregate around other follicles and they have to curve to belong to a common follicle opening. They are not long because the papilla cells aggregate close to other follicles.
+
+An alternative view is that all follicles have sites, because sites are simply the points at which papilla cells agglomerate. The sites of P and So follicles, under this view, are attached in some way to the collagen network, and are subject to movement if hard collagen develops at the time when these follicles are growing. The sites of Sd follicles, on the other hand, seem to be directed to form around existing follicles, and may not be attached to the collagen network at all, so may be less subject to movement. Sd follicles may curve simply because their sites are  slightly out of line with the follicle stem from which they branch.
 
 So what happens in loose or non-wrinkly sheep? Well, the sites dont move, so the P and So follicles are not forced to curve to follow the papilla cells. So in Figure~\ref{fig:radcurvxcurvlen} there are the P and So follicles at the red points on the lower right corner of the scatterplot; they are quite straight ( high radius) and normal length. The rest of the red points are loose sheep Sd follicles, and they are similar to the wrinkly sheep Sd follicles, because they form in the same way, and the collagen hardening does not interfere with Sd's.
 
@@ -142,11 +144,11 @@ Detective stories have almost universal appeal, because they are about the disco
 Lets start with the appearance of follicles in vertical sections from adult sheep. Figure~\ref{fig:follcurv} is a copy of the Nay follicle curvature score drawings. Dr Nay was an artist; these are 3 dimensional drawings; we need to bear that in mind when looking at the curvature of follicles, some are curved in the plane of the page, some are curved in and out of the page. 
 \input{figfollcurv.tex}
 
-The papilla cells ( and therefore the sites in the case of P and So follicles) have to be where the follicle bulbs are. For score 1, the bulbs are all at the same level and directly below the emergence point of the fibre at the epidermal surface. No evidence of movement here. For scores 2 and 3, the bulbs are still all at the same level, but are slightly out of line with the emergence point, so the follicles have a curve, and the sites/papilla cells have moved slightly sideways. For scores 4, 5, 6, and 7 the bulbs are not all at the same level. So do the sites move vertically as well as sideways? It would appear so.  The bulbs are also increasingly out of line with the emergence point, so the follicles curve increasingly, as the scores increase. The sites move sideways as well as vertically. 
+The papilla cells (and therefore the sites) have to be where the follicle bulbs are. For score 1, the bulbs are all at the same level and directly below the emergence point of the fibre at the epidermal surface. No evidence of movement here. For scores 2 and 3, the bulbs are still all at the same level, but are slightly out of line with the emergence point, so the follicles have a curve, and the sites/papilla cells have moved slightly sideways. For scores 4, 5, 6, and 7 the bulbs are not all at the same level. So do the sites move vertically as well as sideways? It would appear so.  The bulbs are also increasingly out of line with the emergence point, so the follicles curve increasingly, as the scores increase. The sites move sideways as well as vertically. 
 
 What are these follicles in scores 6 and 7 for which the bulb is above the lowest point of the follicle curve and facing upwards?  They would have to be follicles for which the site ( or aggregate of papilla cells) has moved sideways and probably upward after the downgrowth of epidermal tissue has commenced.  They start out straight, then have to curve 'late' in their development, producing the typical 'J' curve with a straight upper shaft and a late curve at the lower end.
  
-We have to remember that not all follicles have a site. The Sd follicles  do have a papilla cell aggregate. We do not know  what if anything controls where these Sd aggregates form, but they  seem to cluster alongside existing follicles. We do not know if these Sd papilla cell clusters move, or even if they all form at the same level vertically. So it is difficult to say which might be the Sd follicles in Figure~\ref{fig:follcurv}. There are no distinguishing features - the follicles all look the same. We just know that most of the follicles are Sd's. So what does this suggest. Maybe the Sd follicles are subject to the same papilla cell aggregate movement as the other follicles . Maybe they simply form all over the place initially. 
+We have to remember that not all follicles have a moveable site. The Sd follicles  do have a papilla cell aggregate. We do not know  what if anything controls where these Sd aggregates form, but they  seem to cluster alongside existing follicles. We do not know if these Sd papilla cell clusters move, or even if they all form at the same level vertically. So it is difficult to say which might be the Sd follicles in Figure~\ref{fig:follcurv}. There are no distinguishing features - the follicles all look the same. We just know that most of the follicles are Sd's. So what does this suggest. It seems unlikely that  Sd follicles are subject to the same papilla cell aggregate movement as the other follicles . Maybe they simply form out of line with the follicle branch point initially. 
 
 That is about all we can get out of vertical section from adults. If we had vertical sections of foetal skin we might actually be able to see directly whether follicles curve as they grow. The alternative is that they are bent around afterwards - that still involves movig the 'site', but it also involves dragging the whole fully formed follicle around, which seems biologically unlikely.
 
