Add reference to Moore view on P and So sites

--- a/supplementary/depthandcurv/depthandcurv.tex
+++ b/supplementary/depthandcurv/depthandcurv.tex
@@ -127,7 +127,7 @@ Of all the aspects discussed above, one stands out. Here is what we think is act
 
 Follicles develop in the foetus between 60 and 150 days. Papilla cells migrate to  or agglomerate at sites. Sites are thought to be determined by the collagen network. Above each site, at the skin surface, a downgrowth of epidermal tissue occurs, directed toward the site. The papilla cells at the site act as an attractor.  Now, if the site moves sideways after the downgrowth commences, the partially completed downgrowth will curve toward the new site location, resulting in a curved follicle. The downgrowth will always be toward the attractor. The curved follicle will also need to be longer in order for the bulb to reach the papilla cells at the new site. What would cause the site to move? Well  it would seem that development of hard collagen causes the sites to move. This would have to happen at the critical time while the follicle downgrowths were part complete.
 
-One view is that only P and So follicles have sites. So only P and So follicles would be affected by the 'moving site effect'. So look at Figure~\ref{fig:radcurvxcurvlen}. For the wrinkly sheep  (which are the green points) there are the P and So follicles with their curved length > 140 and tiny radius of curvature, at the top left corner of the scatterplot. All the other green points are Sd follicles; they do not have defined sites; they curve because the papilla cells aggregate around other follicles and they have to curve to belong to a common follicle opening. They are not long because the papilla cells aggregate close to other follicles.
+One view is that only P and So follicles have sites. This is view put forward by Dr Philip Moore in the original presentation of the pre-papila cell hypothesis Moore etal (1989)~\cite{moor:89}. The reason that pre-papilla cells form Sd follicles around existing follicles is that they run out of sites at which to agglomerate. So, on this view,  only P and So follicles would be affected by the 'moving site effect'. So look at Figure~\ref{fig:radcurvxcurvlen}. For the wrinkly sheep  (which are the green points) there are the P and So follicles with their curved length > 140 and tiny radius of curvature, at the top left corner of the scatterplot. All the other green points are Sd follicles; they do not have defined sites; they curve because the papilla cells aggregate around other follicles and they have to curve to belong to a common follicle opening. They are not long because the papilla cells aggregate close to other follicles.
 
 An alternative view is that all follicles have sites, because sites are simply the points at which papilla cells agglomerate. The sites of P and So follicles, under this view, are attached in some way to the collagen network, and are subject to movement if hard collagen develops at the time when these follicles are growing. The sites of Sd follicles, on the other hand, seem to be directed to form around existing follicles, and may not be attached to the collagen network at all, so may be less subject to movement. Sd follicles may curve simply because their sites are  slightly out of line with the follicle stem from which they branch.
 
@@ -205,6 +205,8 @@ Menton, D.N. and Hess, R.A. (1980) The ultrastructure of collagen in the dermis 
 \bibitem{mitc:84}
 Mitchell, T.W. et al (1984) Some physical and mechanical properties of sheep akin with a comparison of "thick" and "thin" skins. Wool Technology and Sheep Breeding, Vol XXXII, No IV, 200-206
 
+/bibitem{moor:89}
+Moore, G.P.M., Jackson, N. and Lax, J. (1989) Evidence of a unique developmental mechanism specifying both wool follicle density and fibre size in sheep selectd for single skin and fleece characters. Genet. Res. Camb. 53:57-62
 
 \bibitem{nay:66}
 Nay, T. (1966) Wool follicle arrangement and vascular pattern in the Australian Merino. Aust. J. Agric. Res. 17:797-805
