--- a/supplementary/depthandcurv/depthandcurv.tex
+++ b/supplementary/depthandcurv/depthandcurv.tex
@@ -12,7 +12,7 @@
 
 \title{Follicle depth, straight length, and curved length in plain and wrinkly sheep}
 \author{Jim Watts and Neville Jackson}
-\date{27 Aug 2018} 
+\date{27  Oct 2018} 
 
  
 \begin{document} 
@@ -125,15 +125,15 @@ That being said, this study has progressed our understanding of why sheep with w
 \section{Conclusion}
 Of all the aspects discussed above, one stands out. Here is what we think is actually happening to follicle development in wrinkly sheep.
 
-Follicles develop in the foetus between 60 and 150 days. Papilla cells migrate to  or agglomerate at sites. Sites are thought to be determined by the collagen network. Above each site, at the skin surface, a downgrowth of epidermal tissue occurs, directed toward the site. The papilla cells at the site act as an attractor.  Now, if the site moves sideways after the downgrowth commences, the partially completed downgrowth will curve toward the new site location, resulting in a curved follicle. The downgrowth will always be toward the attractor. The curved follicle will also need to be longer in order for the bulb to reach the papilla cells at the new site. What would cause the site to move? Well  it would seem that development of hard collagen causes the sites to move. This would have to happen at the critical time while the follicle downgrowths were part complete.
+Follicles develop in the foetus between 60 and 150 days. Papilla cells migrate to  or agglomerate at sites. Sites are  positioned in the dermis, immediately below the epidermis. Above each site, at the skin surface, a downgrowth of epidermal tissue occurs, directed toward the site. The papilla cells at the site act as an attractor.  As the pre-follicle downgrowth proceeds, it pushes the agglomerated pre-papilla cells ahead of it. Now, if the site moves sideways after the downgrowth commences, the partially completed downgrowth will curve toward the new site location, resulting in a curved follicle.  What would cause the site to move?  Well  it would seem that development of hard collagen causes the sites  and the associated follicle downgrowth to move. This would have to happen at the critical time while the follicle downgrowths were part complete.
 
-One view is that only P and So follicles have sites. This is view put forward by Dr Philip Moore in the original presentation of the pre-papila cell hypothesis Moore etal (1989)~\cite{moor:89}. The reason that pre-papilla cells form Sd follicles around existing follicles is that they run out of sites at which to agglomerate. So, on this view,  only P and So follicles would be affected by the 'moving site effect'. So look at Figure~\ref{fig:radcurvxcurvlen}. For the wrinkly sheep  (which are the green points) there are the P and So follicles with their curved length > 140 and tiny radius of curvature, at the top left corner of the scatterplot. All the other green points are Sd follicles; they do not have defined sites; they curve because the papilla cells aggregate around other follicles and they have to curve to belong to a common follicle opening. They are not long because the papilla cells aggregate close to other follicles.
+One view is that only P and So follicles have sites. This is view put forward by Dr Philip Moore in the original presentation of the pre-papila cell hypothesis Moore etal (1989)~\cite{moor:89}. The reason that pre-papilla cells form Sd follicles around existing follicles is thought to be that they run out of sites at which to agglomerate. So, on this view,  only P and So follicles would be affected by the 'moving site effect'. So look at Figure~\ref{fig:radcurvxcurvlen}. For the wrinkly sheep  (which are the green points) there are the P and So follicles with their curved length > 140 and tiny radius of curvature, at the top left corner of the scatterplot. All the other green points are Sd follicles; they do not have defined sites; they curve because the papilla cells aggregate around other follicles and they have to curve to belong to a common follicle opening. They are not long because the papilla cells aggregate close to other follicles.
 
-An alternative view is that all follicles have sites, because sites are simply the points at which papilla cells agglomerate. The sites of P and So follicles, under this view, are attached in some way to the collagen network, and are subject to movement if hard collagen develops at the time when these follicles are growing. The sites of Sd follicles, on the other hand, seem to be directed to form around existing follicles, and may not be attached to the collagen network at all, so may be less subject to movement. Sd follicles may curve simply because their sites are  slightly out of line with the follicle stem from which they branch.
+An alternative view is that all follicles have sites, because sites are simply the points at which papilla cells agglomerate. The sites of P and So follicles, under this view, are subject to movement if hard collagen develops at the time when these follicles are growing. The sites of Sd follicles, on the other hand, seem to be directed to form around existing follicles, and may not be interfered with by the collagen development at all, so may be less subject to movement. Sd follicles may curve simply because their sites are  slightly out of line with the follicle stem from which they branch.
 
 So what happens in loose or non-wrinkly sheep? Well, the sites dont move, so the P and So follicles are not forced to curve to follow the papilla cells. So in Figure~\ref{fig:radcurvxcurvlen} there are the P and So follicles at the red points on the lower right corner of the scatterplot; they are quite straight ( high radius) and normal length. The rest of the red points are loose sheep Sd follicles, and they are similar to the wrinkly sheep Sd follicles, because they form in the same way, and the collagen hardening does not interfere with Sd's.
 
-So there we have it. Our 'moving site hypothesis' explains  follicle size and shape, and how hard collagen affects follicle development. It does not explain why a curved follicle grows a curved fibre. That, however is quite simple - in order to form inside a curved follicle a fibre must have either more cortical cells or longer cortical cells on the side of the fibre cross section which corresponds to the outer side of the curve. This is simple material science, the outer side of a curved object has to be longer than the inner side. Once a fibre forms in  that way, it retains the intrinsic curvature permanently. That is what we observe. Fibre curvature is a complicated phenomenon because, apart from this intrinsic curvature, fibres can be 'set' into other other degrees of curvature, for example in a staple where the crimp observed is not just intrinsic curvature but a complicated phenomenon involving stretching or unfolding of the intrinsic curvature combined with various setting conditions. Staple crimp is semi-permanent. Fibre intrinsic curvature is permanent ( ie is always recoverable) and is the same thing as follicle curvature.
+So there we have it. Our 'collagen interference hypothesis' explains  follicle size and shape, and how hard collagen affects follicle development. It does not explain why a curved follicle grows a curved fibre. That, however is quite simple - in order to form inside a curved follicle a fibre must have either more cortical cells or longer cortical cells on the side of the fibre cross section which corresponds to the outer side of the curve. This is simple material science, the outer side of a curved object has to be longer than the inner side. Once a fibre forms in  that way, it retains the intrinsic curvature permanently. That is what we observe. Fibre curvature is a complicated phenomenon because, apart from this intrinsic curvature, fibres can be 'set' into other other degrees of curvature, for example in a staple where the crimp observed is not just intrinsic curvature but a complicated phenomenon involving stretching or unfolding of the intrinsic curvature combined with various setting conditions. Staple crimp is semi-permanent. Fibre intrinsic curvature is permanent ( ie is always recoverable) and is the same thing as follicle curvature.
 
 So why all this concern about crimp and curvature? Well, wrinkly sheep ( and  low density sheep with hard collagen that are not wrinkly, such as Downs Wool Breeds)  all have characteristically highly crimped fleeces. This is one of the outstanding features of wrinkled sheep, so we must explain crimp and curvature, or we have not grasped the wrinkle issue.
 
@@ -144,13 +144,13 @@ Detective stories have almost universal appeal, because they are about the disco
 Lets start with the appearance of follicles in vertical sections from adult sheep. Figure~\ref{fig:follcurv} is a copy of the Nay follicle curvature score drawings. Dr Nay was an artist; these are 3 dimensional drawings; we need to bear that in mind when looking at the curvature of follicles, some are curved in the plane of the page, some are curved in and out of the page. 
 \input{figfollcurv.tex}
 
-The papilla cells (and therefore the sites) have to be where the follicle bulbs are. For score 1, the bulbs are all at the same level and directly below the emergence point of the fibre at the epidermal surface. No evidence of movement here. For scores 2 and 3, the bulbs are still all at the same level, but are slightly out of line with the emergence point, so the follicles have a curve, and the sites/papilla cells have moved slightly sideways. For scores 4, 5, 6, and 7 the bulbs are not all at the same level. So do the sites move vertically as well as sideways? It would appear so.  The bulbs are also increasingly out of line with the emergence point, so the follicles curve increasingly, as the scores increase. The sites move sideways as well as vertically. 
+The papilla cells (and therefore the sites) have to be where the follicle bulbs are. For score 1, the bulbs are all at the same level and directly below the emergence point of the fibre at the epidermal surface. No evidence of movement here. For scores 2 and 3, the bulbs are still all at the same level, but are slightly out of line with the emergence point, so the follicles have a curve, and the sites/papilla cells have moved slightly sideways. For scores 4, 5, 6, and 7 the bulbs are not all at the same level. So do the sites move vertically as well as sideways? It would appear so.  The bulbs are also increasingly out of line with the emergence point, so the follicles curve increasingly, as the scores increase. The sites move sideways as well as vertically.  
 
-What are these follicles in scores 6 and 7 for which the bulb is above the lowest point of the follicle curve and facing upwards?  They would have to be follicles for which the site ( or aggregate of papilla cells) has moved sideways and probably upward after the downgrowth of epidermal tissue has commenced.  They start out straight, then have to curve 'late' in their development, producing the typical 'J' curve with a straight upper shaft and a late curve at the lower end.
+What are these follicles in scores 6 and 7 for which the bulb is above the lowest point of the follicle curve and facing upwards?  They would have to be follicles for which the site ( or aggregate of papilla cells) has moved sideways and probably upward after the downgrowth of epidermal tissue has commenced.  They start out straight, then have to curve 'late' in their development, due to interaction with the collagen network, producing the typical 'J' curve with a straight upper shaft and a late curve at the lower end.
  
-We have to remember that not all follicles have a moveable site. The Sd follicles  do have a papilla cell aggregate. We do not know  what if anything controls where these Sd aggregates form, but they  seem to cluster alongside existing follicles. We do not know if these Sd papilla cell clusters move, or even if they all form at the same level vertically. So it is difficult to say which might be the Sd follicles in Figure~\ref{fig:follcurv}. There are no distinguishing features - the follicles all look the same. We just know that most of the follicles are Sd's. So what does this suggest. It seems unlikely that  Sd follicles are subject to the same papilla cell aggregate movement as the other follicles . Maybe they simply form out of line with the follicle branch point initially. 
+We have to remember that not all follicles have a moveable site. The Sd follicles  do have a papilla cell aggregate. We do not know  what if anything controls where these Sd aggregates form, but they  seem to cluster alongside existing follicles. We do not know if these Sd papilla cell clusters move, or even if they all form at the same level vertically. So it is difficult to say which might be the Sd follicles in Figure~\ref{fig:follcurv}. There are no distinguishing features - the follicles all look the same. We just know that most of the follicles are Sd's. So what does this suggest. It seems unlikely that  Sd follicles are subject to the same papilla cell aggregate  and bulb movement as the other follicles . Maybe they simply form out of line with the follicle branch point initially. 
 
-That is about all we can get out of vertical section from adults. If we had vertical sections of foetal skin we might actually be able to see directly whether follicles curve as they grow. The alternative is that they are bent around afterwards - that still involves movig the 'site', but it also involves dragging the whole fully formed follicle around, which seems biologically unlikely.
+That is about all we can get out of vertical section from adults. If we had vertical sections of foetal skin we might actually be able to see directly whether follicles curve as they grow. The foetal skin photomicrographs in Hardy and Lyne(1956)~\cite{hard:56} seem to suggest that developing foetal follicles have a curvature. The alternative is that they are bent around afterwards - that still involves moving the 'site', but it also involves dragging the whole fully formed follicle around, which seems biologically unlikely.
 
 We can also have a look at what effects site movement might have on the arrangement of follicles in horizontal sections. We have to bear in mind that horizontal sections are conventionally taken at sebacious gland level, which is well above the bulb region, so any effect of site movement will be minimal. We have to also bear in mind that  follicles and follicle groups are also moved around by expansion of the skin as the animal grows. 
 
@@ -162,11 +162,11 @@ Well that is about all of the clues to site movement. One of the difficulties is
 
 So can we solve the 'great site movement' mystery? Only partially. We cant finish the detection story with a clear cut answer. It will come out eventually, but not with existing observations. We need a direct measure of 'site movement'. The nearest thing we have to a measure of follicle bulb displacement is the observation of the sagitta (h) of the follicle arc. A large sagitta means the follicle bulb has been displaced, but sagitta is obviously also related to curvature, so it is not a 'clean' measure.  We will just have a brief look at sagitta by plotting curvature ( ie 1/radius of curvature) against curved length of each follicle, with each point shown as the sagitta value. This graph is shown in Figure~\ref{fig:curvxcurvlenxh}.
 \input{figcurvxcurvlenxh.tex}
- Clearly if sagitta measures bulb displacement, then the most displaced bulbs are both longer follicles and more curved follicles. That is what we have already concluded. So maybe sagitta does measure site movement.  Anactual measure of bulb displacement would be better, but we must not forget that thick vertical sections are 3D objects. All our measurements - straight length (t) and sagitta (h) are 2D projections and therefore biased. All the calculations we make from the measrements - curved length and radius of curvature - are also biased. A bulb displacement measure would also be biased. 
+ Clearly if sagitta measures bulb displacement, then the most displaced bulbs are both longer follicles and more curved follicles. That is what we have already concluded. So maybe sagitta does measure site movement.  An actual measure of bulb displacement would be better, but we must not forget that thick vertical sections are 3D objects. All our measurements - straight length (t) and sagitta (h) are 2D projections and therefore biased. All the calculations we make from the measrements - curved length and radius of curvature - are also biased. A bulb displacement measure would also be biased. 
 
-We must not be carried away with the apparent order of Figure~\ref{fig:curvxcurvlenxh}. It represents a family of curves of equal 'h' value. It is like that because bothe Curvlen and Radcurv are calculated from 'h' ( and 't') by our equations. The separation of the lines of equal 'h' value is simply a property of our equations. We chose to use 1/Radcurv in Figure~\ref{fig:curvxcurvlenxh}, rather than Radcurv as in Figure~\ref{fig:radcurvxcurvlen} simply because it displays the sagitta effect better. So where are the P and So follicles in Figure~\ref{fig:curvxcurvlenxh}? They do not cluster separately as in Figure~\ref{fig:radcurvxcurvlen}, but the loose skin P and So follicles are in the bottom left corner ( with a low sagitta value ), and the wrinkly skin P and So follicles are towards the top right corner along the lines with large sagitta value representing lots of bulb displacement. The bulk of follicles in the middle are Sd's, and probably also follicles which curve out of the plane of measurement.
+We must not be carried away with the apparent order of Figure~\ref{fig:curvxcurvlenxh}. It represents a family of curves of equal 'h' value. It is like that because both Curvlen and Radcurv are calculated from 'h' ( and 't') by our equations. The separation of the lines of equal 'h' value is simply a property of our equations. We chose to use 1/Radcurv in Figure~\ref{fig:curvxcurvlenxh}, rather than Radcurv as in Figure~\ref{fig:radcurvxcurvlen} simply because it displays the sagitta effect better. So where are the P and So follicles in Figure~\ref{fig:curvxcurvlenxh}? They do not cluster separately as in Figure~\ref{fig:radcurvxcurvlen}, but the loose skin P and So follicles are in the bottom left corner ( with a low sagitta value ), and the wrinkly skin P and So follicles are towards the top right corner along the lines with large sagitta value representing lots of bulb displacement. The bulk of follicles in the middle are Sd's, and probably also follicles which curve out of the plane of measurement.
 
-Finally, what Figure~\ref{fig:curvxcurvlenxh} shows is that sagitta is not just curvature, but a range of combinations of curved length and curvature. Moving the site does cause follicles to curve, but it also causes them to grow longer in order to reach the displaced site. So maybe sagitta is a good measurement of site movement. We will have to think about it.
+Finally, what Figure~\ref{fig:curvxcurvlenxh} shows is that sagitta is not just curvature, but a range of combinations of curved length and curvature. Moving the site does cause follicles to curve, but it also seems to cause them to grow longer . So maybe sagitta is a good measurement of site movement. We will have to think about it.
 
 
 \clearpage
@@ -182,6 +182,8 @@ Carter H.B. (1943) Studies in the biology of the skin and fleece of sheep. 1. Th
 \bibitem{fras:60}
 Fraser A.S and Short B.F. (1960) The Biology of the Fleece. Animal Research Laboratories Technical Paper No 3. CSIRO Melbourne 1960.
 
+\bibitem{hard:56}
+Hardy, M.H. and Lyne, A.G. (1956) The prenatal development of wool follicles in Merino sheep. Aust. J. biol. Sci. 9:423-441
 
 \bibitem{jack:17a}
 Jackson, N. (2017) Genetic relationship between skin and wool traits in Merino sheep. Part I Responses to selection and estimates of genetic parameters. URL https://github.com/nevillejackson/Fleece-genetics/tree/master/skinandfleeceparameters/ab3220/skinwool1.pdf
@@ -205,7 +207,7 @@ Menton, D.N. and Hess, R.A. (1980) The ultrastructure of collagen in the dermis 
 \bibitem{mitc:84}
 Mitchell, T.W. et al (1984) Some physical and mechanical properties of sheep akin with a comparison of "thick" and "thin" skins. Wool Technology and Sheep Breeding, Vol XXXII, No IV, 200-206
 
-/bibitem{moor:89}
+\bibitem{moor:89}
 Moore, G.P.M., Jackson, N. and Lax, J. (1989) Evidence of a unique developmental mechanism specifying both wool follicle density and fibre size in sheep selectd for single skin and fleece characters. Genet. Res. Camb. 53:57-62
 
 \bibitem{nay:66}
