--- a/supplementary/depthandcurv/tabaov.tex
+++ b/supplementary/depthandcurv/tabaov.tex
@@ -1,19 +1,20 @@
 %FOLLDEP
-\label{tab:aov}
+%\label{tab:aov}
 \begin{table}[ht]
 \centering
 \caption{Analyses of variance of Follicle depth, Follicle straight length, Follicle curved length, and Follicle radius of curvature}
+\label{tab:aov}
 \begin{tabular}{lrrrrr}
   \hline
  & & Follicle depth & & & \\
  Effect & Df & Sum Sq & Mean Sq & F value & Pr($>$F) \\ 
   \hline
   Error: Sheep & & & & &  \\
-Flock     & 1 & 1.08 & 1.08 & 0.00 & 0.9861 \\ 
-  Skin.type & 1 & 35822.56 & 35822.56 & 10.16 & 0.0031 \\ 
-  Residuals & 33 & 116320.51 & 3524.86 &  &  \\ 
+Flock     & 1 & 0.00432 & 0.00432 & 0.00 & 0.9861 \\ 
+  Skin.type & 1 & 14.329 & 14.329 & 10.16 & 0.0031 \\ 
+  Residuals & 33 & 46.5282 & 1.4099 &  &  \\ 
   Error: Within & & & & &  \\
-  Residuals1 & 860 & 59641.23 & 69.35 &  &  \\ 
+  Residuals1 & 860 & 23.856 & 0.02774 &  &  \\ 
    \hline
 %\end{tabular}
 %\end{table}
@@ -27,11 +28,11 @@ Flock     & 1 & 1.08 & 1.08 & 0.00 & 0.9861 \\
  Effect & Df & Sum Sq & Mean Sq & F value & Pr($>$F) \\ 
   \hline
   Error: Sheep & & & & &  \\
-Flock     & 1 & 5218.12 & 5218.12 & 1.32 & 0.2591 \\ 
-  Skin.type & 1 & 21042.58 & 21042.58 & 5.32 & 0.0275 \\ 
-  Residuals & 33 & 130612.06 & 3957.94 &  &  \\ 
+Flock     & 1 & 2.0872 & 2.0872 & 1.32 & 0.2591 \\ 
+  Skin.type & 1 & 8.4170 & 8.4170 & 5.32 & 0.0275 \\ 
+  Residuals & 33 & 52.24 & 1.5832 &  &  \\ 
   Error: Within & & & & &  \\
-  Residuals1 & 860 & 66226.12 & 77.01 &  &  \\ 
+  Residuals1 & 860 & 26.490 & 0.0308 &  &  \\ 
    \hline
 %\end{tabular}
 %\end{table}
@@ -45,11 +46,11 @@ Flock     & 1 & 5218.12 & 5218.12 & 1.32 & 0.2591 \\
  Effect & Df & Sum Sq & Mean Sq & F value & Pr($>$F) \\ 
   \hline
   Error: Sheep & & & & &  \\
-Flock     & 1 & 4251.50 & 4251.50 & 1.03 & 0.3180 \\ 
-  Skin.type & 1 & 44711.74 & 44711.74 & 10.81 & 0.0024 \\ 
-  Residuals & 33 & 136454.62 & 4134.99 &  &  \\ 
+Flock     & 1 & 1.7006 & 1.7006 & 1.03 & 0.3180 \\ 
+  Skin.type & 1 & 17.885 & 17.885 & 10.81 & 0.0024 \\ 
+  Residuals & 33 & 54.582 & 1.654 &  &  \\ 
   Error: Within & & & & &  \\
-  Residuals1 & 860 & 75424.61 & 87.70 &  &  \\ 
+  Residuals1 & 860 & 30.169 & 0.3508 &  &  \\ 
    \hline
 %\end{tabular}
 %\end{table}
@@ -63,11 +64,11 @@ Flock     & 1 & 4251.50 & 4251.50 & 1.03 & 0.3180 \\
  Effect & Df & Sum Sq & Mean Sq & F value & Pr($>$F) \\ 
   \hline
   Error: Sheep & & & &  & \\
-Flock     & 1 & 239208.35 & 239208.35 & 1.31 & 0.2603 \\ 
-  Skin.type & 1 & 16554724.49 & 16554724.49 & 90.79 & 0.0000 \\ 
-  Residuals & 33 & 6017368.02 & 182344.49 &  &  \\ 
+Flock     & 1 & 95.683 & 95.683 & 1.31 & 0.2603 \\ 
+  Skin.type & 1 & 6621.89 & 6621.89 & 90.79 & 0.0000 \\ 
+  Residuals & 33 & 2406.947 & 72.9378 &  &  \\ 
   Error: Within & & & & &  \\
-  Residuals1 & 860 & 20509483.53 & 23848.24 &  &  \\ 
+  Residuals1 & 860 & 8203.793 & 9.5393 &  &  \\ 
    \hline
 \end{tabular}
 \end{table}
