More on intro of histcollwrin.tex

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -29,19 +29,22 @@ $\newcommand{\SD}{\mathrm{SD}}$
 \section{Introduction} 
 
 Wrinkle formation in Australian Merino sheep skin is a phenomenon with serious economic and political consequences.  It has long been known (Seddon, Belschner, and Mulhearn (1931)~\cite{sedd:31}) that wrinkled sheep are more susceptible to blowfly strike. The use of the {\em mulesing} operation to control flystrike in Merino sheep has recently been the subject of intense animal ethics scrutiny, and no effective alternative management option has appeared.
-The most effective long term solution would seem to be to breed the wrinkle out of Merino sheep. This has met with resistance from some Australian Merino breeders who feel that the extra skin surface area of wrinkled sheep is necessary to achieve high levels of wool production. Breeding plans which include some culling on wrinkle usually do not lead to its complete elimination (for example Turner Dolling and Kennedy (1970)~\cite{turn:68}).
+The most effective long term solution would seem to be to breed the wrinkle out of Merino sheep. This approach has met with resistance from some Australian Merino breeders who feel that the extra skin surface area of wrinkled sheep is necessary to achieve high levels of wool production. Breeding plans which include some culling on wrinkle usually do not lead to its complete elimination (for example Turner Dolling and Kennedy (1968)~\cite{turn:68}).
 
-This study  is an attempt to go back to the basic biology of wrinkle formation, to see whether we can understand the structure of a wrinkle, and to see if that leads to a better approach breeding of wrinkle-free sheep  without lowering productivity or adversely affecting wool quality. 
+This study  is an attempt to go back to the basic biology of wrinkle formation, to see whether we can understand the tissue structure of a wrinkle, and to see if that suggests  a better approach breeding of wrinkle-free sheep  without lowering productivity or adversely affecting wool quality. 
 
-There have been very few attempts to define what a wrinkle actually is. The early work of Carter(1943)~\cite{cart:43} went as far as describing and naming all the folds on the neck, body, and breech, and developed a set of photographic scores for degree of wrinkle. Carter used the terms {\em fold} and {\em wrinkle} interchangeably, but he distinguished the small {\em pin wrinkles} present in all Merinos, from the larger folds which develop to varying degrees as the sheep matures. From this early start, there is, somewhat surprisingly, nothing on the biology of wrinkles, until the study of Mitchell etal(1984)~\cite{mitch:84}. 
+There have been very few attempts to define what a wrinkle actually is. The early work of Carter(1943)~\cite{cart:43} went as far as describing and naming all the folds on the neck, body, and breech, and developed a set of photographic scores for degree of wrinkle. Carter used the terms {\em fold} and {\em wrinkle} interchangeably, but he distinguished the small {\em pin wrinkles} present in all Merinos, from the larger folds which develop to varying degrees as the sheep matures. From this early start, there is, somewhat surprisingly, nothing on the biology of wrinkles, until the study of Mitchell et al(1984)~\cite{mitc:84}. 
 
-The Mitchell etal(1984)~\cite{mitch:84} paper defines five tissue layers in sheep skin - epidermis, papillary dermis, reticular dermis, layer 4 containing muscle, collagen and elastin, and adipose tissue. These are illustrated in Figure ~\ref{fig:mitchell}
+The Mitchell et al(1984)~\cite{mitc:84} paper defines five tissue layers in sheep skin -  Layer 1; epidermis, Layer 2; papillary dermis, Layer 3; reticular dermis, Layer 4;  containing muscle, collagen and elastin, and Layer 5; adipose tissue. These are illustrated in Figure ~\ref{fig:mitchell}
 \input{figmitchell.tex}
-Only the first 3 layers curve upward in a folded section of skin, layers 4 and 5 remain straight. This can be seen in Figure ~\ref{fig:mitchell}. Mitchell etalshowed that if layers 4 and 5 were removed, then the folded sections relaxed and flattenned. The implication is that the first 3 layers in a fold are longer then the underlying layers so that the collagen binding layer 4 holds the upper 3 layers in the curved or folded shape.
+Only the first 3 layers curve upward in a folded section of skin, layers 4 and 5 remain straight. This can be seen in Figure ~\ref{fig:mitchell}. Mitchell et al showed that if layers 4 and 5 were removed from a sheep skin, then the folded sections relaxed and flattenned. The implication is that the first 3 layers in a fold are longer (in the direction across the wrinkle) than the underlying layers, so that the collagen binding layer 4 holds the upper 3 layers in the curved or folded shape.
 
-We refer to the Introduction section of the Jackson and Watts(2017)~\cite{jack:17b} document, where we review the place of wrinkle or skin folds in Merino breeding, and where we specifically refer to the suggestion that all skin wrinkle must be culled from a sheep flock, before they can be successfully selected for the SRS-Merino breeding criteria. This statement leads to the questions of when and how wrinkle development interferes with follicle development to such an extent that breeding of superior Merinos using SRS methodology should be impossible in the presence of wrinkle. An attempt was made , in Jackson and Watts(2017)~\cite{jack:17b} to put forward the hypothesis that wrinkles form in the foetus at the same stage as secondary follicle development so would be likely to affect secondary follicle density or S/P ratio or secondary fibre diameter. This was based on a somewhat obsure reference (Bogolyubsky (1940)~\cite{bogo:40}) which asserts that wrinkles were observed forming in foetal skin of Karakul and Merino lambs at around 100 days of gestation. There are no other studies of wrinkle development, but there is a considerable literature on follicle development ( see Fraser and Short(1960)~\cite{fras:60} and Maddocks and Jackson(1988)~\cite{madd:88} and Ryder and Stevenson(1968)~\cite{ryde:68} for reviews). There is some literature on collagen development in sheep skin, and we will look at that below.
+Even less is known about wrinkle development. Merino lambs are born with visible wrinkles.  A somewhat obsure reference (Bogolyubsky (1940)~\cite{bogo:40}) asserts that wrinkles were observed forming in foetal skin of Karakul and Merino lambs at around 100 days of gestation. That is about the time at which the secondary derived follicles initiate. There are no other studies of foetal wrinkle development, but there is a considerable literature on follicle development ( see Fraser and Short(1960)~\cite{fras:60} and Maddocks and Jackson(1988)~\cite{madd:88} and Ryder and Stevenson(1968)~\cite{ryde:68} for reviews). There is some literature on collagen development in sheep skin, and we will look at that below.
 
-What is proposed here is that the amount and type ( and maybe timing and arrangement in the skin) of collagen development might be a common factor involved with both wrinkle development and follicle development. So what is known about collagen? Well, it is already there in the foetal skin at the time follicles develop (Knight et al (1993) ~\cite{knig:93}).  These authors distinguish two collagen types ( Type III or 'soft' collagen, and Type I or 'hard' collagen) and note  that Type III is highest at 75 days of gestation, and falls progressively as the foetus develops, while Type I is low at day 75 and rises to over 50 percent by birth. Collagen fibres are formed from cells called {\em fibroblasts}. At 75-80 days the fibroblasts appear as plump, immature cells surrounded by reticular collagen fibres which are composed of Type III collagen. By birth the fibroblasts have matured  and the collagen fibres may be intermeshed to varying degrees. If the fine reticular fibre pattern remains, it is soft collagen, if the fibres intermesh the collagen tissue is hardened to various degrees. 
+What is investigated here is that the amount and type ( and maybe timing and arrangement in the skin) of collagen development might be a factor involved with both wrinkle development and follicle development. So what is known about collagen? Well, it is already there in the foetal skin at the time follicles develop (Knight et al (1993) ~\cite{knig:93}). 
+WHICH LAYERS?
+ These authors distinguish two collagen types ( Type III or 'soft' collagen, and Type I or 'hard' collagen) and note  that Type III is highest at 75 days of gestation, and falls progressively as the foetus develops, while Type I is low at day 75 and rises to over 50 percent by birth. Collagen fibres are formed from cells called {\em fibroblasts}. At 75-80 days the fibroblasts appear as plump, immature cells surrounded by reticular collagen fibres which are composed of Type III collagen. By birth the fibroblasts have matured  and the collagen fibres may be intermeshed to varying degrees. If the fine reticular fibre pattern remains, it is soft collagen, if the fibres intermesh the collagen tissue is hardened to various degrees. 
+
 
 The arrangement (location) of collagen in the skin is also important. In adult skin, Mitchell(1984)~\cite{mitc:84} distinguishes 5 layers in a vertical section of sheep skin
 \begin{description}
@@ -185,7 +188,7 @@ Turner, Helen Newton(1958) Aust. J. Agric. Res. 9:521-52
 \bibitem{turn:53}
 Turner, Helen Newton, Hayman, R.H., Riches, J.H., Roberts, N.F., and Wilson, L.T. (1953) Physical definition of sheep and their fleece for breeding and husbandry studies: with particular reference to Merino sheep. CSIRO Div. Anim. Hlth. Prod. Div. Rept. No. 4 (Ser SW-2 mimeo)
 
-/bibitem{turn:68}
+\bibitem{turn:68}
 Turner, H.N., Dolling, C.H.S., and Kennedy, J.F. (1968) Response to selection in Australian Merino sheep. I. Selection for high clean wool weight with a ceiling on fibre diameter and degree of wrinkle. Response in wool and body characteristics. Aust. J. agric. Res. 19:79-112
 
 \bibitem{turn:70}
